clean up code/add select+filter

--- a/.env-example
+++ b/.env-example
@@ -5,4 +5,4 @@ DBPW=secret
 DB=couch_critique
 
 # App Development Startup Settings, toggle settings with TRUE/FALSE
-STARTUP_NEW_DB=FALSE
+STARTUP_NEW_DB=TRUE
